Raven Ridge (2400G): graphics artifacts while playing Visage (594330)
Description
As the title says, I get a lot of graphics artifacts while playing Visage. The artifacts start to appear during the first chapter or so, I cannot tell exactly where they appear as they happen randomly.
Screenshots/video files
Here's a video demonstration of the problem: https://www.youtube.com/watch?v=YTLA0D_gpHk
Steps to reproduce
Play Visage (594330) on a raven ridge and walk around, you should get a lot of distortion as it shows in the screenshots.
I am attaching a apitrace below, I can also provide save games that should take you exactly to where the issue occurs.
System information
- OS: Arch Linux
- GPU: 07:00.0 VGA compatible controller [0300]: Advanced Micro Devices, Inc. [AMD/ATI] Raven Ridge [Radeon Vega Series / Radeon Vega Mobile Series] [1002:15dd] (rev c6)
- Kernel version: Linux steam 5.10.8-arch1-1 #1 (closed) SMP PREEMPT Sun, 17 Jan 2021 22:07:13 +0000 x86_64 GNU/Linux
- Mesa version: OpenGL version string: 4.6 (Compatibility Profile) Mesa 20.3.3
- Desktop environment: i3-wm 4.19-1
If applicable
- Xserver version: X.Org X Server 1.20.10
- DXVK version: 1.7.3
- Wine/Proton version: Wine version: 6.0 (Also tested with Proton 5.13-5, Proton 6.0-GE-1, etc)
Regression
No, it never worked for me, the graphics always displayed artifacts as it shows in the screenshots. I tried the newest git master and the problem is there with both ACO and LLVM backends, I also tried older mesa versions, the oldest one I could compile was mesa-20.2.0 but this bug is also reproducible with that version.
I cannot reproduce the problem with AMDVLK (graphics are fine with AMDVLK).
API captures (if applicable, optional)
https://drive.google.com/file/d/1JUMR6gqpgsQOyLJU7oB774xq6He4bBtD/view?usp=sharing
Further information (optional)
I can reproduce the problem with both ACO and LLVM backends, I cannot reproduce the problem with AMDVLK.
I originally reported this bug here: https://github.com/doitsujin/dxvk/issues/1876 and doitsujin couldn't reproduce it with his GPU using the same apitrace provided on this bug report.
Please let me know if you need more information.